--- a/templates/Hello World.html
+++ b/templates/Hello World.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>ff hadi olsun be</title>
+    <title>ff hadi olsun be bir daha mı</title>
 </head>
 <body>
 
